styles/print.css
/* ... */
  #resume h5:nth-of-type(10n + 9) a,
  #resume ul:nth-of-type(10n + 9) a,
  #resume p:nth-of-type(10n + 9) a {
    -webkit-animation-delay: 1.8s;
            animation-delay: 1.8s; }
  #resume h5:nth-of-type(10n + 10) a,
  #resume ul:nth-of-type(10n + 10) a,
  #resume p:nth-of-type(10n + 10) a {
    -webkit-animation-delay: 2s;
            animation-delay: 2s; }
  @media (any-hover) {
    #resume a:hover {
      -webkit-animation: none;
              animation: none; } }
  #resume h2 {
    font-size: 1.125em;
    font-weight: 700;
    line-height: 1.125em;
    width: 100%;
    margin-top: 2.5em;
    margin-bottom: 0;
    padding-bottom: .25em;
    letter-spacing: .5px;
    border-bottom: solid 1px #999999; }
    @media only screen and (max-width: 45em) {
      #resume h2 {
        font-size: 1em; } }
    #resume h2:first-of-type {
      margin-top: 0;
      margin-bottom: 0;
      border-bottom: none; }
      #resume h2:first-of-type + p {
        margin-left: 0; }
        #resume h2:first-of-type + p + p {
          margin-left: 0; }
          #resume h2:first-of-type + p + p + p {
            margin-left: 0; }
  #resume h2 + h3 {
    margin-top: .75em; }
  #resume h3 {
    font-size: 1em;
    font-weight: 700;
    margin-top: 2em;
    margin-bottom: .5em; }
    @media only screen and (max-width: 45em) {
      #resume h3 {
        font-size: .875em; } }
    #resume h3 em {
      font-size: .875em;
      font-weight: 400;
      white-space: nowrap; }
      #resume h3 em:before {
        padding-right: .5em;
        content: '';
        white-space: normal; }
  #resume h3 + h3 {
    margin-top: -.5em; }
  #resume h3 + p {
    margin-top: 0; }
    #resume h3 + p a {
      color: #4b5866; }
      #resume h3 + p a:hover {
        color: #7eb5e5; }
  #resume h4 {
    font-size: .75em;
    margin-top: 2em;
    margin-bottom: -2em;
    margin-left: 2em;
    font-weight: 400;
    color: #8998a8; }
    #resume h4:after {
      content: ':'; }
  #resume h5 {
    margin-top: 2em;
    margin-bottom: -.25em;
    margin-left: 2em; }
  #resume p {
    font-size: .875em;
    margin-top: .5em;
    margin-left: 2em; }
  #resume h3 + p,
  #resume h3 + p + p,
  #resume h3 + p + p + p,
  #resume h3 + p + p + p + p {
    margin-left: 0; }
  #resume h2 + p {
    margin-left: 0; }
  #resume ul {
    font-size: .875em;
    margin-left: 2em;
    margin-top: .75em; }
    @media only screen and (max-width: 45em) {
      #resume ul {
        margin-left: 1em; } }
  #resume li {
    line-height: 1.5em;
    padding-left: .75em;
    text-indent: -.75em;
    margin-top: .5em; }
    #resume li:before {
      content: '• '; }
  #resume li > ul,
  #resume li > ul a {
    font-size: 1em;
    margin-top: 0; }
    #resume li > ul::before,
    #resume li > ul a::before {
      content: none; }
  #resume li > ul > li {
    padding-left: 1.125em;
    list-style: none; }
    #resume li > ul > li:before {
      content: none; }
  #resume li > em {
    margin-left: 0;
    margin-left: .25em; }
    #resume li > em:before {
      content: ' – ';
      text-decoration: none; }

#portfolio {
  display: grid;
  cursor: pointer;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  grid-gap: .33em;
  grid-template-columns: repeat(auto-fill, minmax(24%, 1fr));
  margin-top: .25em;
  -webkit-box-pack: space-evenly;
     -moz-box-pack: space-evenly;
      -ms-flex-pack: space-evenly;
          justify-content: space-evenly;
  margin-bottom: 1em; }
  @media (max-aspect-ratio: 70/100) {
    #portfolio {
      grid-template-columns: repeat(auto-fill, minmax(32%, 1fr)); } }
  @media (min-aspect-ratio: 110/100) {
    #portfolio {
      grid-template-columns: repeat(auto-fill, minmax(19%, 1fr)); } }
  @media (any-hover) {
    #portfolio a:hover:after {
      font-size: .66em;
      position: relative;
      float: left;
      margin-top: calc(-50% - 2em);
      margin-left: calc(50% - 1.5em);
      content: '';
      cursor: pointer;
      pointer-events: none;
      opacity: 1;
      border-width: 2em 0 2em 3.5em;
      border-style: solid;
      border-color: transparent transparent transparent white; } }
  #portfolio img {
    cursor: pointer;
    width: 100%;
    margin-bottom: -.33em;
    border-radius: 3%;
    -webkit-transition: -webkit-filter .33s;
    transition: -webkit-filter .33s;
    transition: filter .33s;
    transition: filter .33s, -webkit-filter .33s;
    -webkit-filter: saturate(90%) brightness(90%) grayscale(10%);
            filter: saturate(90%) brightness(90%) grayscale(10%); }
    @media (any-hover) {
      #portfolio img:hover {
        -webkit-box-shadow: 0 0 0.25em 0.125em rgba(0, 0, 0, 0.2);
                box-shadow: 0 0 0.25em 0.125em rgba(0, 0, 0, 0.2);
        -webkit-filter: saturate(110%) brightness(110%) grayscale(0%);
                filter: saturate(110%) brightness(110%) grayscale(0%); } }
a {
  color: #1f5186 !important; }

#home,
#portfolio,
#portfolio-filters,
#resume-filters {
  display: none !important; }

body {
  background: none;
  font-size: 14px; }

header {
  border: none;
  position: relative;
  margin-bottom: .5em;
  background: none; }
  header nav {
    display: block; }
  header nav a {
    display: none; }
  header nav a.contact {
    display: block;
    font-size: 1.5em;
    font-weight: 700;
    color: #4b5866 !important;
    text-decoration: none;
    line-height: 1.4em;
    padding-bottom: 0; }

#resume-contact {
  font-size: .875em;
  color: #4b5866;
  margin-bottom: .75em; }
  #resume-contact a {
    color: #4b5866 !important;
    text-decoration: none; }

h1, h2, h3, h4, h5 {
  page-break-after: avoid; }

 ul, a, p {
  page-break-inside: avoid; }

